force-app/main/default/objects/Foo__c/Foo__c.object-meta.xml
<CustomObject>
    <label>Foo</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Foo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>