force-app/main/default/objects/Foo__c/fields/Account2__c.field-meta.xml
<CustomField>
    <fullName>Account2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>Account2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Foo (Account2)</relationshipLabel>
    <relationshipName>SecondFooes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>