force-app/main/default/objects/Foo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Rating</field>
            <operation>equals</operation>
            <value>Hot, Warm</value>
        </filterItems>
        <infoMessage>lookup window text</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Foo</relationshipLabel>
    <relationshipName>Fooes</relationshipName>
    <type>Lookup</type>
</CustomField>