force-app/main/default/objects/Foo__c/fields/Bar__c.field-meta.xml
<CustomField>
    <fullName>Bar__c</fullName>
    <label>Bar</label>
    <referenceTo>Bar__c</referenceTo>
    <relationshipLabel>Foo</relationshipLabel>
    <relationshipName>Fooes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>