force-app/main/default/objects/Foo__c/fields/MyAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>MyAutoNumber__c</fullName>
    <description>description text</description>
    <displayFormat>A-{00000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyAutoNumber</label>
    <type>AutoNumber</type>
</CustomField>