force-app/main/default/objects/Foo__c/fields/MyCheckbox__c.field-meta.xml
<CustomField>
    <fullName>MyCheckbox__c</fullName>
    <defaultValue>true</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyCheckbox</label>
    <type>Checkbox</type>
</CustomField>