force-app/main/default/objects/Foo__c/fields/MyChildPicklist__c.field-meta.xml
<CustomField>
    <fullName>MyChildPicklist__c</fullName>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyChildPicklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MyPicklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>