force-app/main/default/objects/Foo__c/fields/MyCurrency__c.field-meta.xml
<CustomField>
    <fullName>MyCurrency__c</fullName>
    <defaultValue>0</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyCurrency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>