force-app/main/default/objects/Foo__c/fields/MyDate__c.field-meta.xml
<CustomField>
    <fullName>MyDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>