force-app/main/default/objects/Foo__c/fields/MyDateTime__c.field-meta.xml
<CustomField>
    <fullName>MyDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>