force-app/main/default/objects/Foo__c/fields/MyEmail__c.field-meta.xml
<CustomField>
    <fullName>MyEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&quot;foo@example.com&quot;</defaultValue>
    <description>description</description>
    <externalId>true</externalId>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyEmail</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>