force-app/main/default/objects/Foo__c/fields/MyEncryptedText__c.field-meta.xml
<CustomField>
    <fullName>MyEncryptedText__c</fullName>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyEncryptedText</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>