force-app/main/default/objects/Foo__c/fields/MyFormula__c.field-meta.xml
<CustomField>
    <fullName>MyFormula__c</fullName>
    <description>description text</description>
    <formula>1=2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyFormula</label>
    <type>Checkbox</type>
</CustomField>