force-app/main/default/objects/Foo__c/fields/MyGeolocation__c.field-meta.xml
<CustomField>
    <fullName>MyGeolocation__c</fullName>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyGeolocation</label>
    <required>true</required>
    <scale>2</scale>
    <type>Location</type>
</CustomField>