force-app/main/default/objects/Foo__c/fields/MyGlobalPicklist__c.field-meta.xml
<CustomField>
    <fullName>MyGlobalPicklist__c</fullName>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyGlobalPicklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MyGlobalPickValue</valueSetName>
    </valueSet>
</CustomField>