force-app/main/default/objects/Foo__c/fields/MyLongTextArea__c.field-meta.xml
<CustomField>
    <fullName>MyLongTextArea__c</fullName>
    <defaultValue>TEXT(UNIXTIMESTAMP(NOW()))</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyLongTextArea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>