force-app/main/default/objects/Foo__c/fields/MyMultiPicklist__c.field-meta.xml
<CustomField>
    <fullName>MyMultiPicklist__c</fullName>
    <defaultValue>&quot;Z&quot;</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyMultiPicklist</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>X</fullName>
                <default>true</default>
                <label>Value X</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Value Y</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Value Z</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>