force-app/main/default/objects/Foo__c/fields/MyNumber__c.field-meta.xml
<CustomField>
    <fullName>MyNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>description</description>
    <externalId>true</externalId>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>