force-app/main/default/objects/Foo__c/fields/MyPercent__c.field-meta.xml
<CustomField>
    <fullName>MyPercent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyPercent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>