force-app/main/default/objects/Foo__c/fields/MyPhone__c.field-meta.xml
<CustomField>
    <fullName>MyPhone__c</fullName>
    <defaultValue>&quot;000-0000-0000&quot;</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyPhone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>