force-app/main/default/objects/Foo__c/fields/MyPicklist__c.field-meta.xml
<CustomField>
    <fullName>MyPicklist__c</fullName>
    <defaultValue>&quot;A&quot;</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyPicklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Value A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Value B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Value C</label>
            </value>
            <value>
                <fullName>D</fullName>
                <default>true</default>
                <label>Value D</label>
            </value>
            <value>
                <fullName>E</fullName>
                <isActive>false</isActive>
                <label>Value E</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>