force-app/main/default/objects/Foo__c/fields/MyRichTextArea__c.field-meta.xml
<CustomField>
    <fullName>MyRichTextArea__c</fullName>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyRichTextArea</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>