force-app/main/default/objects/Foo__c/fields/MyText__c.field-meta.xml
<CustomField>
    <fullName>MyText__c</fullName>
    <defaultValue>TEXT(UNIXTIMESTAMP(NOW()))</defaultValue>
    <description>description</description>
    <externalId>true</externalId>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyText</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>