force-app/main/default/objects/Foo__c/fields/MyTextArea__c.field-meta.xml
<CustomField>
    <fullName>MyTextArea__c</fullName>
    <defaultValue>TEXT(UNIXTIMESTAMP(NOW()))</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyTextArea</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>