force-app/main/default/objects/Foo__c/fields/MyTime__c.field-meta.xml
<CustomField>
    <fullName>MyTime__c</fullName>
    <defaultValue>TIMENOW()</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyTime</label>
    <required>true</required>
    <type>Time</type>
</CustomField>