force-app/main/default/objects/Foo__c/fields/MyURL__c.field-meta.xml
<CustomField>
    <fullName>MyURL__c</fullName>
    <defaultValue>&quot;https://www.example.com&quot;</defaultValue>
    <description>description</description>
    <inlineHelpText>help text</inlineHelpText>
    <label>MyURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>