force-app/main/default/objects/Foo__c/validationRules/MyTextValidationRule1.validationRule-meta.xml
<ValidationRule>
    <fullName>MyTextValidationRule1</fullName>
    <active>true</active>
    <description>description</description>
    <errorConditionFormula>LEN(MyText__c)&lt;3</errorConditionFormula>
    <errorDisplayField>MyText__c</errorDisplayField>
    <errorMessage>Too short text</errorMessage>
</ValidationRule>